# advent-of-code-2024

./: .gitignore  README.md
rust/: Cargo.toml  justfile
rust/benchmarks/: benchmarks.txt  day-01.bench.txt  day-02.bench.txt  day-03.bench.txt  day-04.bench.txt
rust/daily-template/: Cargo.toml
rust/daily-template/src/: part1.rs  part2.rs
rust/day-01/: Cargo.toml
rust/day-01/src/: part1.rs  part2.rs
rust/day-02/: Cargo.toml
rust/day-02/src/: part1.rs  part2.rs
rust/day-03/: Cargo.toml
rust/day-03/src/: part1.rs  part2.rs
rust/day-04/: Cargo.toml
rust/day-04/src/: part1.rs  part2.rs
rust/day-05/: Cargo.toml
rust/day-05/src/: part1.rs  part2.rs
rust/day-06/: Cargo.toml
rust/day-06/benches/: benchmarks.rs
rust/day-06/src/: part1.rs  part2.rs
rust/day-07/: Cargo.toml
rust/day-07/src/: part1.rs  part2.rs
rust/day-08/: Cargo.toml
rust/day-08/src/: part1.rs  part2.rs
rust/day-09/: Cargo.toml
rust/day-09/src/: part1.rs  part2.rs
rust/day-10/: Cargo.toml
rust/day-10/src/: part1.rs  part2.rs
rust/day-11/: Cargo.toml
rust/day-11/src/: part1.rs  part2.rs
rust/day-12/: Cargo.toml
rust/day-12/src/: part1.rs  part2.rs
rust/day-13/: Cargo.toml
rust/day-13/src/: part1.rs  part2.rs
rust/day-14/: Cargo.toml
rust/day-14/src/: part1.rs  part2.rs
rust/day-15/: Cargo.toml
rust/day-15/src/: part1.rs  part2.rs
